fixed overflow of card

--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+  word-break: break-word;
 }
 body {
   background: var(--bg-color);
@@ -153,7 +154,6 @@ input {
 }
 .card p {
   margin-bottom: 0.7rem;
-  word-wrap: break-word;
 }
 .tag-container {
   display: flex;
